[build-system]
requires = [
  "setuptools>=64",
  "pybind11>=3.0",
  "cibuildwheel>=4.0"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = "pp*"
test-command = "python -c \"import steamworks\""
before-build = "python -m pip install delvewheel"
repair-wheel-command = "delvewheel repair --add-path \"{project}/build\" -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows]
build = "cp314-win_amd64" #"cp312-win_amd64 cp313-win_amd64 cp314-win_amd64"

[tool.cibuildwheel.linux]
build = "cp312-manylinux_x86_64 cp313-manylinux_x86_64 cp314-manylinux_x86_64"