[build-system]
requires = [
  "setuptools>=64",
  "wheel",
  "pybind11>=3.0",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = "pp*"
test-command = "python -c \"import steamworks\""

[tool.cibuildwheel.windows]
build = "cp314-win_amd64" #"cp312-win_amd64 cp313-win_amd64 cp314-win_amd64"
repair-wheel-command = 'delvewheel repair --add-path "{project}/build" -w {dest_dir} -v {wheel}'

[tool.cibuildwheel.linux]
build = "cp312-manylinux_x86_64 cp313-manylinux_x86_64 cp314-manylinux_x86_64"
repair-wheel-command = 'LD_LIBRARY_PATH="{project}/build:${LD_LIBRARY_PATH:-}" auditwheel repair -w {dest_dir} {wheel}'

[tool.cibuildwheel.macos]
build = "cp312-macosx_x86_64 cp313-macosx_x86_64 cp314-macosx_x86_64"
repair-wheel-command = 'DYLD_LIBRARY_PATH="{project}/build" delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}'